--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -381,7 +381,7 @@ for this case $k_7\approx0.0026\,\text{mn}^{-1}$, then
 \begin{equation}
 	\sigma^\ko \approx 1.0019 \pm 2\cdot10^{-5},
 \end{equation}
-which is a very good approximation to the diffusive $\sigma=1.00229$. Accordingly, we will keep the more precise and documented $\sigma$ 
+which is a very good approximation \todo{given the crude assumptions} to the diffusive $\sigma=1.00229$. Accordingly, we will keep the more precise and documented $\sigma$ 
 in the following theoretical and numerical work.
 
 \section{Short Times Behaviours}
