--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -320,8 +320,13 @@ The isotopic separation is related to the amplification factor by:
 	.
 \end{equation}
 
-\section{Information from Leakage}
-\subsection{Isotopic separation}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Information from Experiments}
+\subsection{Information from Leakage}
+
+\subsubsection{Passive Isotopic Separation}
 With $E_0=0$, we readily obtain:
 \begin{equation}
 	\beta^\ko_x = \Theta \left(1-e^{-k_xt} \right),
@@ -347,7 +352,7 @@ and without active contribution, the initial isotopic ratio amounts to:
 which is far greater than the observed values even after some time \todo{ref figures in manuscript+values}
 
 
-\subsection{Global Passive Lithium Intake}
+\subsubsection{Global Passive Lithium Intake}
 Likewise, for membrane potential around $40\,\text{mV}$ at $37^\circ\text{C}$:
 \begin{equation}
 \label{eq:ThetaValue}
@@ -385,6 +390,10 @@ for this case $k_7\approx0.0026\,\text{mn}^{-1}$, then
 \end{equation}
 which is a very good approximation \todo{given the crude assumptions} to the diffusive $\sigma=1.00229$. Accordingly, we will keep the more precise and documented $\sigma$ 
 in the following theoretical and numerical work.
+
+\subsection{Information from pH recovery}
+
+
 
 \section{Short Times Behaviours}
 
