switching to qtiplot

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -340,7 +340,7 @@ We define the \textit{passive isotopic ratio}:
 \label{eq:sigma}
 	\sigma  =  \dfrac{k_6}{k_7}.
 \end{equation}
-The GHK theory states that a passive-like behaviour is expected through the ion channels that lithium isotopes will cross.
+The GHK theory states that a diffusive-like behaviour is expected through the ion channels that lithium isotopes will cross.
 We hence expect the ratio of the constant rates ($k_x$) to be in the same order of magnitude, so we assume \todo{ref}:
 \begin{equation}
 	\sigma \simeq 1.00229,
@@ -393,6 +393,12 @@ in the following theoretical and numerical work.
 
 \subsection{Information from pH recovery}
 
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{protons.pdf}
+\end{center}
+\caption{\label{fig:protons} Fit (lines) of apparent experimental protons intake (open circles) }
+\end{figure}
 
 
 \section{Short Times Behaviours}
