--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -81,6 +81,7 @@
 \maketitle
 
 \section{Setting up the Model}
+At 1mn, Lithium is about 5mM inside with 15mM outside...for both passive or NHE...
 
 \subsection{Description And Notations}
 
