--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -82,6 +82,7 @@
 
 \section{Setting up the Model}
 At 1mn, Lithium is about 5mM inside with 15mM outside...for both passive or NHE...
+La fuite irait moins vite d'un facteur 2 ou 3
 
 \subsection{Description And Notations}
 
