--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -411,6 +411,14 @@ and we use this equation to fit the current data as indicated on Figure \ref{fig
 \caption{\label{fig:protons} Fit (lines, according to Eq. \eqref{eq:hfit}) of apparent experimental protons intake (open circles).}
 \end{figure}
 
+\subsection{Information from another work about proton recycling}
+The proton exit rate by $\NHE{1}$ was studied elsewhere \todo{ref EMBO Lacroix,Counillon}, and this rate depends itself on the inner pH.
+From the data presented in figure 3a of that manuscript which shows that the $\NHE{1}$ turnover rate with $\proton$ is a sigmoid function, we
+assume:
+\begin{equation}
+\label{eq:kh}
+k_h \approx 
+\end{equation}
 
 \section{Short Times Behaviours}
 
