--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -400,7 +400,7 @@ and are reported on Figure \ref{fig:protons} for different total external lithiu
 we take $\proton$ as an experiment-dependent input, and it appears that we get roughly:
 \begin{equation}
 \label{eq:hfit}
-	\proton \simeq \proton_0 + \left(\proton_\infty-\proton_0\right) \dfrac{t}{t+t_h},
+	\proton \simeq \proton_0 + \left(\proton_\infty-\proton_0\right) \dfrac{t}{t+t_h} = \proton_\infty + \left(\proton_0 - \proton_\infty\right) \dfrac{t_h}{t+t_h},
 \end{equation}
 and we use this equation to fit the current data as indicated on Figure \ref{fig:protons} 
 
@@ -445,9 +445,24 @@ k_h & = & k_0 \eta(h)\\
 \end{array}
 \right.
 \end{equation}
+With 
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcll}
+	k_h & = & f(t), & F(t) = \int_0^t f(u) \, \mathrm{d} u \\
+	\LiAllOut \Upsilon_\alpha\proton & = & g(t), & G(t) = \int_0^t g(u) \, \mathrm{d} u\\
+	\end{array}
+\right.
+\end{equation}
 
 \begin{equation}
-\beta_x(t) = \Theta\left[1-e^{-k_xt}\right] + E_0 \Upsilon_x \left[ \int_0^t \hat\alpha(u) h(u) e^{k_x u }\,\mathrm{d} u \right] e^{-k_x t}
+\left\lbrace
+\begin{array}{rcl}
+	\hat\alpha(t) & = & \left[ 1 + \int_0^t f(u) e^{F(u)}e^{G(u)}\,\mathrm{d} u \right] e^{-\left[F(t)+G(t)\right]}\\
+	\\
+	\beta_x(t)    & = & \Theta\left[1-e^{-k_xt}\right] + E_0 \Upsilon_x \left[ \int_0^t \hat\alpha(u) h(u) e^{k_x u }\,\mathrm{d} u \right] e^{-k_x t} \\
+\end{array}
+\right.
 \end{equation}
 
 \section{Short Times Behaviours}
