study effect of eta

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -465,6 +465,16 @@ With
 \right.
 \end{equation}
 
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	g(t) & = & \kappa  h(t)  = \kappa  \left(  \proton_\infty + \left(\proton_0 - \proton_\infty\right) \dfrac{t_h}{t+t_h} \right)\\
+	\\
+	G(t) & = & \kappa \left( \proton_\infty t + \left(\proton_0 - \proton_\infty\right) t_h \ln\left(1+\dfrac{t}{t_h}\right)\right)\\
+	\end{array}
+\right.
+\end{equation}
+
 \section{Short Times Behaviours}
 
 \subsection{Initial Isotopic Separation}
