--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -286,7 +286,8 @@ It is interesting to define:
 \left\lbrace
 \begin{array}{rcl}
 	\Upsilon_x & = & \dfrac{k^p_x J_x}{1+J_\epsilon \LiAllOut}\\
-	\Upsilon_\alpha & = & \epsilon_6 \Upsilon_6 + \epsilon_7 \Upsilon_7\\
+	\Upsilon_6 & = & \kappa \Upsilon_7 \\
+	\Upsilon_\alpha & = & \epsilon_6 \Upsilon_6 + \epsilon_7 \Upsilon_7 = (\epsilon_6 \kappa + \epsilon_7) \Upsilon_7\\
 \end{array}
 \right.
 \end{equation}
@@ -440,6 +441,7 @@ and we note that:
 \end{equation}
 
 \section{Linear System}
+\subsection{System}
 \begin{equation}
 \label{eq:syslin}
 \left\lbrace
@@ -482,8 +484,7 @@ With
 \right.
 \end{equation}
 
-\section{Short Times Behaviours}
-
+	
 \subsection{Initial Isotopic Separation}
 We perform the short times integration of the system \eqref{eq:sysbis} using the initial
 conditions \eqref{eq:ini} to get:
@@ -501,8 +502,38 @@ r_0 & = & \dfrac{k_7\Theta+E_0 \proton_0 \Upsilon_7}{k_6\Theta+E_0 \proton_0 \Up
 \end{array}
 \right.
 \end{equation}
+Accordingly, $r_0$ may vary between $\dfrac{1}{\sigma}$ and $\dfrac{1}{\kappa}$, so the only way for $\deltaLi$ to reach values
+below $\deltaLi^\ko\simeq12.25$ is to satisfy $\kappa>\sigma$.
 
-\subsection{Passive Return}
+\subsection{Initial Active Speedup}
+We measured the passive intake and the active intake (Laurent...)
+and we found a speed up $s_0$ such that:
+\begin{equation}
+	\partial_t \Lambda_{\vert t\to0} \simeq s_0 \partial_t \Lambda^\ko_{\vert t\to0},
+\end{equation}
+leading to
+\begin{equation}
+\begin{array}{rcl}
+	\partial_t \Lambda_{\vert t\to0} & = & \left[ (\epsilon_6 \sigma + \epsilon_7) k_7 \Theta + E_0 \proton_0 \Upsilon_\alpha \right] \LiAllOut \\
+	& = & s_0 \left[  (\epsilon_6 \sigma + \epsilon_7) k_7 \Theta \right] \LiAllOut \\
+\end{array}	
+\end{equation}
+
+\subsection{Final Isotopic Separation}
+\begin{equation}
+\label{eq:inf}
+\left\lbrace
+\begin{array}{rcl}
+	\hat\alpha_\infty & = & \dfrac{k_0\eta(\proton_\infty)}{k_0\eta(\proton_\infty)+\LiAllOut \proton_\infty \Upsilon_\alpha}\\
+	\\
+	\beta_x^\infty & = &\Theta + E_0 \hat\alpha_\infty \proton_\infty \dfrac{\Upsilon_x}{k_x}\\
+\end{array}
+\right.
+\end{equation}
+
+
+
+\section{Passive Return}
 Let us assume that for a given time $t^\start$ we get the values $\beta_x^\start$ such that $\beta_6^\start+\beta_7^\start=B^\start\Theta$ and a given isotopic ratio $r^\start$:
 \begin{equation}
 \label{eq:start}
