WIP finding parameters

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -558,6 +558,33 @@ We inject this expression into to get the ratios:
 \right.
 \end{equation}
 
+We choose
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+\dfrac{1}{r_0} & > & \sigma\\
+\mu & > & 0\\
+\end{array}
+\right.
+\end{equation}
+We get the matching expression for $\kappa$:
+\begin{equation}
+%\left\lbrace
+	\kappa  =  \dfrac{1+\mu}{\mu}\left[\dfrac{1}{r_0} - \dfrac{\sigma}{1+\mu}\right].
+%\right.
+\end{equation}
+We define the function
+\begin{equation}
+	\varphi = \hat\alpha \dfrac{\proton}{\proton_0},
+\end{equation}
+then there exists $\omega$
+\begin{equation}
+ r_\infty = \underbrace{\cos^2\omega + \dfrac{\sigma}{\kappa} \sin^2\omega}_{\leq 1}
+\end{equation}
+and
+\begin{equation}
+	\varphi_\infty = \dfrac{1}{\mu} \dfrac{\sigma}{\kappa}  \tan^2 \omega.
+\end{equation}
 
 \section{Passive Return}
 Let us assume that for a given time $t^\start$ we get the values $\beta_x^\start$ such that $\beta_6^\start+\beta_7^\start=B^\start\Theta$ and a given isotopic ratio $r^\start$:
