--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -558,16 +558,15 @@ We inject this expression into to get the ratios:
 \right.
 \end{equation}
 
-We choose
+From the experiments we estimate:
 \begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\dfrac{1}{r_0} & > & \sigma\\
-\mu & > & 0\\
-\end{array}
-\right.
+\dfrac{1}{r_0}  >  \sigma,
 \end{equation}
-We get the matching expression for $\kappa$:
+so that we choose:
+\begin{equation}
+\mu > 0,
+\end{equation}
+to get the matching expression for $\kappa$:
 \begin{equation}
 %\left\lbrace
 	\kappa  =  \dfrac{1+\mu}{\mu}\left[\dfrac{1}{r_0} - \dfrac{\sigma}{1+\mu}\right].
