need to make alpha simulation with time scales...

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -600,7 +600,7 @@ to get the matching expression for $\kappa$:
 \end{array}
 \right.
 \end{equation}
-We must study the bahavior of $\hat\alpha$.
+We must study the behavior of $\hat\alpha$.
 We define:
 \begin{equation}
 	\hat\alpha_\infty = \cos^2\Omega = \dfrac{k_0\eta_\infty}{k_0\eta_\infty+\LiAllOut \proton_\infty \Upsilon_\alpha}
