need to connect rinf and omega

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -454,35 +454,36 @@ and we note that:
 \end{array}
 \right.
 \end{equation}
-With 
-\begin{equation}
-\left\lbrace
-	\begin{array}{rcll}
-	k_h & = & f(t), & F(t) = \int_0^t f(u) \, \mathrm{d} u \\
-	\LiAllOut \Upsilon_\alpha\proton & = & g(t), & G(t) = \int_0^t g(u) \, \mathrm{d} u\\
-	\end{array}
-\right.
-\end{equation}
 
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\hat\alpha(t) & = & \left[ 1 + \int_0^t f(u) e^{F(u)}e^{G(u)}\,\mathrm{d} u \right] e^{-\left[F(t)+G(t)\right]}\\
-	\\
-	\beta_x(t)    & = & \Theta\left[1-e^{-k_xt}\right] + E_0 \Upsilon_x \left[ \int_0^t \hat\alpha(u) h(u) e^{k_x u }\,\mathrm{d} u \right] e^{-k_x t} \\
-\end{array}
-\right.
-\end{equation}
-
-\begin{equation}
-\left\lbrace
-	\begin{array}{rcl}
-	g(t) & = & \gamma  h(t)  = \gamma  \left(  \proton_\infty + \left(\proton_0 - \proton_\infty\right) \dfrac{t_h}{t+t_h} \right)\\
-	\\
-	G(t) & = & \gamma \left( \proton_\infty t + \left(\proton_0 - \proton_\infty\right) t_h \ln\left(1+\dfrac{t}{t_h}\right)\right)\\
-	\end{array}
-\right.
-\end{equation}
+%With 
+%\begin{equation}
+%\left\lbrace
+%	\begin{array}{rcll}
+%	k_h & = & f(t), & F(t) = \int_0^t f(u) \, \mathrm{d} u \\
+%	\LiAllOut \Upsilon_\alpha\proton & = & g(t), & G(t) = \int_0^t g(u) \, \mathrm{d} u\\
+%	\end{array}
+%\right.
+%\end{equation}
+%
+%\begin{equation}
+%\left\lbrace
+%\begin{array}{rcl}
+%	\hat\alpha(t) & = & \left[ 1 + \int_0^t f(u) e^{F(u)}e^{G(u)}\,\mathrm{d} u \right] e^{-\left[F(t)+G(t)\right]}\\
+%	\\
+%	\beta_x(t)    & = & \Theta\left[1-e^{-k_xt}\right] + E_0 \Upsilon_x \left[ \int_0^t \hat\alpha(u) h(u) e^{k_x u }\,\mathrm{d} u \right] e^{-k_x t} \\
+%\end{array}
+%\right.
+%\end{equation}
+%
+%\begin{equation}
+%\left\lbrace
+%	\begin{array}{rcl}
+%	g(t) & = & \gamma  h(t)  = \gamma  \left(  \proton_\infty + \left(\proton_0 - \proton_\infty\right) \dfrac{t_h}{t+t_h} \right)\\
+%	\\
+%	G(t) & = & \gamma \left( \proton_\infty t + \left(\proton_0 - \proton_\infty\right) t_h \ln\left(1+\dfrac{t}{t_h}\right)\right)\\
+%	\end{array}
+%\right.
+%\end{equation}
 
 	
 \subsection{Initial Isotopic Separation}
