WIP supmat, tuning r_inf

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -573,19 +573,21 @@ to get the matching expression for $\kappa$:
 \begin{equation}
 	\kappa  =  \dfrac{1+\mu}{\mu}\left[\dfrac{1}{r_0} - \dfrac{\sigma}{1+\mu}\right].
 \end{equation}
+We also remark that:
+\begin{equation}
+\left\lbrace
+\begin{array}{l}
+	r_\infty  \in  \left[\dfrac{\sigma}{\kappa};1\right]\\
+	 \Rightarrow  \exists \omega,\; r_\infty = \cos^2\omega + \dfrac{\sigma}{\kappa} \sin^2 \omega\\
+	 \Rightarrow  \varphi_\infty \mu = \dfrac{\sigma}{\kappa} \tan^2\omega\\
+\end{array}
+\right.
+\end{equation}
+Accordinly, the final ratio is governed by:
+\begin{equation}
+	\tan^2 \omega = \mu \dfrac{\kappa}{\sigma} \dfrac{\proton_\infty}{\proton_0} \alpha_\infty
+\end{equation}
 
-%We define the function
-%\begin{equation}
-%	\varphi = \hat\alpha \dfrac{\proton}{\proton_0},
-%\end{equation}
-%then there exists $\omega$
-%\begin{equation}
-% r_\infty = \underbrace{\cos^2\omega + \dfrac{\sigma}{\kappa} \sin^2\omega}_{\leq 1}
-%\end{equation}
-%and
-%\begin{equation}
-%	\varphi_\infty = \dfrac{1}{\mu} \dfrac{\sigma}{\kappa}  \tan^2 \omega.
-%\end{equation}
 
 \subsection{Parametric System}
 We must study the behavior of $\hat\alpha$.
