WIP supmat, controlling rinf

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -574,45 +574,24 @@ to get the matching expression for $\kappa$:
 \left\lbrace
 \begin{array}{rcl}
 	\kappa  & = &  \dfrac{1+\mu}{\mu}\left[\dfrac{1}{r_0} - \dfrac{\sigma}{1+\mu}\right] 
-	=  \sigma + \underbrace{\dfrac{1+\mu}{\mu}\left[ \dfrac{1}{r_0} - \sigma \right]}_{>0}\\
-	%\\
-	\dfrac{\kappa}{\sigma} & = & 1 + {\dfrac{1+\mu}{\mu}\left[ \dfrac{1}{\rho_0} - 1\right]} = \dfrac{1}{\rho}\;\; \left(\dfrac{\kappa}{\sigma}> 1,\; \rho_0=r_0\sigma\right)\\
+	=  \sigma + {\dfrac{1+\mu}{\mu}\left[ \dfrac{1}{r_0} - \sigma \right]} \; (\kappa>\sigma)\\
 	\\
-	\mu \dfrac{\kappa}{\sigma} & = & \dfrac{1+\mu}{\rho_0} - 1 = \dfrac{\mu}{\rho}\\
+	\dfrac{\kappa}{\sigma} & = & 1 + {\dfrac{1+\mu}{\mu}\left[ \dfrac{1}{r_0\sigma} - 1\right]} \; \left(\dfrac{\kappa}{\sigma}> 1\right)\\
+	\\
+	\mu \dfrac{\kappa}{\sigma} & = & \dfrac{1+\mu}{r_0\sigma} - 1\\
 	\\
  \kappa & > & \dfrac{1}{r_0} > \sigma \;\Rightarrow\; \dfrac{\sigma}{\kappa}=\rho < \sigma r_0 = \rho_0 < 1\\
 \end{array}
 \right.
 \end{equation}
+These expressions arising from the initial conditions are directly influencing the steady state values:
+\begin{equation}
+	r_\infty = \dfrac{1+\mu \varphi_\infty}{1+\left(\dfrac{1+\mu}{r_0\sigma} - 1\right)\varphi_\infty}.
+\end{equation}
+For a given value of $\mu$, $r_\infty$ is a {\bf decreasing} value of $\varphi_\infty$, 	and this is the only way
+to recover a high value.
 
-We also remark that:
-\begin{equation}
-	r_\infty  \in  \left[\dfrac{\sigma}{\kappa} < \sigma r_0;1\right],
-\end{equation}
-so that
-\begin{equation}
-	\varphi_\infty =
-	 \dfrac{\rho}{\mu} 
-	\left(
-	\dfrac{1-r_\infty}{r_\infty-\rho}
-	\right) = \dfrac{1-r_\infty}{\dfrac{\mu}{\rho}r_\infty - \mu }
-\end{equation}
-We define
-\begin{equation}
-	\gamma_h = \dfrac{\proton_\infty}{\proton_0},\;\varphi_\infty = \gamma_h \hat\alpha_\infty
-\end{equation}
-which imposes a constraint on $\mu$ since we must respect:
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\dfrac{1-r_\infty}{\dfrac{\mu}{\rho}r_\infty - \mu } & \leq & \gamma_h\\
-	\\
-	r_\infty \left(\dfrac{1+\mu}{\rho_0} - 1\right) - \mu & \geq & \dfrac{1-r_\infty}{\gamma_h}\\
-	\\
-	\mu \left(\dfrac{r_\infty}{\rho_0}-1 \right) & \geq & \dfrac{1-r_\infty}{\gamma_h} - r_\infty\left(\dfrac{1}{\rho_0}-1\right)\\
-\end{array}
-\right.
-\end{equation}
+
 
 \subsection{Parametric System}
 We must study the behavior of $\hat\alpha$.
