need to fix rinf...

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -593,7 +593,7 @@ For a given value of $\mu$, $r_\infty$ is a {\bf decreasing} value of $\varphi_\
 to recover a high value.
 We define $\omega$ such that:
 \begin{equation}
-	r_\infty = \cos^2 \omega + r_0\sigma \sin^2 \omega \;\; \left(\tan^2\omega = \dfrac{1-r_\infty}{r_\infty-r_0\sigma}\right), 
+	r_\infty = \cos^2 \omega + r_0\sigma \sin^2 \omega \;\; \left(\text{with }\tan^2\omega = \dfrac{1-r_\infty}{r_\infty-r_0\sigma}\right), 
 \end{equation}
 so that the inversion of \eqref{eq:r_ss} yields:
 \begin{equation}
@@ -608,7 +608,10 @@ We hence observe a constraint on the model since for a give $\omega$ we must sat
 \end{array}
 \right.
 \end{equation}
-...
+For any value of $\gamma_h$ and $r_\infty$ we compute a critical value $\mu_c$ such that
+\begin{equation}
+	\hat\alpha_\infty(\mu\geq\mu_c) = \cos^2\Omega.
+\end{equation}
 
 
 \subsection{Parametric System}
