--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -553,6 +553,8 @@ We inject this expression into to get the ratios:
 	\\
 	\varphi & = &   \dfrac{\hat\alpha \proton}{\proton_0}\\
 	\\
+	\gamma_h & = &  \dfrac{\proton_\infty}{\proton_0} \;\; \left(\Rightarrow \varphi_\infty = \gamma_h \hat\alpha_\infty\right)\\
+	\\
 	r_\infty & = &
 	 \dfrac{\Theta + E_0 \hat\alpha_\infty \proton_\infty \dfrac{\Upsilon_7}{k_7} }
 	 {\Theta + E_0 \hat\alpha_\infty \proton_\infty \dfrac{\Upsilon_6}{k_6}}
@@ -587,30 +589,18 @@ to get the matching expression for $\kappa$:
 These expressions arising from the initial conditions are directly influencing the steady state values:
 \begin{equation}
 \label{eq:r_ss}
-	r_\infty = \dfrac{1+\mu \varphi_\infty}{1+\left(\dfrac{1+\mu}{r_0\sigma} - 1\right)\varphi_\infty} \geq r_0 \sigma .
-\end{equation}
-For a given value of $\mu$, $r_\infty$ is a {\bf decreasing} value of $\varphi_\infty$, 	and this is the only way
-to recover a high value.
-We define $\omega$ such that:
-\begin{equation}
-	r_\infty = \cos^2 \omega + r_0\sigma \sin^2 \omega \;\; \left(\text{with }\tan^2\omega = \dfrac{1-r_\infty}{r_\infty-r_0\sigma}\right), 
-\end{equation}
-so that the inversion of \eqref{eq:r_ss} yields:
-\begin{equation}
-\label{eq:phi_ss}
-\varphi_\infty = \dfrac{1}{1+\left(\dfrac{1+\mu}{r_0\sigma}\right) \cot^2 \omega} = \underbrace{\hat\alpha_\infty}_{\leq 1} \gamma_h,\;\;\gamma_h = \dfrac{\proton_\infty}{\proton_0}.
-\end{equation}
-We hence observe a constraint on the model since for a give $\omega$ we must satisfy:
-\begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\dfrac{1}{1+\left(\dfrac{1+\mu}{r_0\sigma}\right) \cot^2 \omega} & \leq & \gamma_h\\
+	r_\infty & = & \dfrac{1+\mu \varphi_\infty}{1+\left(\dfrac{1+\mu}{r_0\sigma} - 1\right)\varphi_\infty} \geq r_0 \sigma\\
+	\\
+	& = & \dfrac{1+\mu \gamma_h \hat\alpha_\infty}{1+\left(\dfrac{1+\mu}{r_0\sigma} - 1\right)\gamma_h \hat\alpha_\infty} 
 \end{array}
 \right.
 \end{equation}
-For any value of $\gamma_h$ and $r_\infty$ we compute a critical value $\mu_c$ such that
+We show that to recover a high $r_\infty$, we must have $\varphi_\infty\leq 1$, and \textbf{we will assume that $\gamma_h\leq1$}.
+For any $\mu$:
 \begin{equation}
-	\hat\alpha_\infty(\mu\geq\mu_c) = \cos^2\Omega.
+	r_0\sigma \leq \dfrac{1+\mu\gamma_h}{1+\left(\dfrac{1+\mu}{r_0\sigma}-1\right) \gamma_h} \leq r_\infty \leq 1
 \end{equation}
 
 
